// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToastTest render: render content 1`] = `
<DocumentFragment>
  <div
    aria-live="polite"
    class="toastContainer"
  >
    <div
      class="ms-fadeIn100 toastContent"
    >
      hello world
    </div>
  </div>
</DocumentFragment>
`;

exports[`ToastTest render: render nothing before show() is called 1`] = `
<DocumentFragment>
  <div
    aria-live="polite"
    class="toastContainer"
  />
</DocumentFragment>
`;
